--- a/src/Dinner Page/styles.scss
+++ b/src/Dinner Page/styles.scss
@@ -59,6 +59,7 @@
   }
 
   .index-and-floor {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -66,6 +67,15 @@
     border-radius: 8px;
     background-color: #f8d40b;
     overflow: hidden;
+
+    .no {
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      font-size: 20px;
+      color: white;
+      font-family: 'Comic Sans MS';
+    }
 
     .index {
       flex: 1;
